--- a/builds/vs2010/QSanguosha.vcxproj
+++ b/builds/vs2010/QSanguosha.vcxproj
@@ -1143,6 +1143,7 @@
       <WarningLevel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">TurnOffAllWarnings</WarningLevel>
       <WarningLevel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">TurnOffAllWarnings</WarningLevel>
     </ClCompile>
+	    <ClCompile Include="GeneratedFiles\qrc_diy.cpp"/>
     <ClCompile Include="..\..\src\dialog\rule-summary.cpp" />
     <ClCompile Include="..\..\src\scenario\scenario.cpp" />
     <ClCompile Include="..\..\src\scenario\scenerule.cpp" />
@@ -2760,7 +2761,25 @@
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Release\moc_%(Filename).cpp;%(Outputs)</Outputs>
     </CustomBuild>
   </ItemGroup>
-  <ItemGroup>
+  <ItemGroup>   
+  <CustomBuild Include="..\..\diy.qrc">
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(FullPath);..\..\diy\companion.png;..\..\diy\lord-magatama-l.png;..\..\diy\lord-magatama-lt.png;..\..\diy\lord-magatama-r.png;..\..\diy\lord-magatama-rt.png;..\..\diy\mask.png;..\..\diy\qun.png;..\..\diy\qun-lord.png;..\..\diy\qun-magatama-l.png;..\..\diy\qun-magatama-lt.png;..\..\diy\qun-magatama-r.png;..\..\diy\qun-magatama-rt.png;..\..\diy\qun-skill.png;..\..\diy\shu.png;..\..\diy\shu-lord.png;..\..\diy\shu-magatama-l.png;..\..\diy\shu-magatama-lt.png;..\..\diy\shu-magatama-r.png;..\..\diy\shu-magatama-rt.png;..\..\diy\shu-skill.png;..\..\diy\wei.png;..\..\diy\wei-lord.png;..\..\diy\wei-magatama-l.png;..\..\diy\wei-magatama-lt.png;..\..\diy\wei-magatama-r.png;..\..\diy\wei-magatama-rt.png;..\..\diy\wei-skill.png;..\..\diy\wu.png;..\..\diy\wu-lord.png;..\..\diy\wu-magatama-l.png;..\..\diy\wu-magatama-lt.png;..\..\diy\wu-magatama-r.png;..\..\diy\wu-magatama-rt.png;..\..\diy\wu-skill.png;%(AdditionalInputs)</AdditionalInputs>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Rcc%27ing %(Identity)...</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">.\GeneratedFiles\qrc_%(Filename).cpp;%(Outputs)</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">"$(QTDIR)\bin\rcc.exe" -name "%(Filename)" -no-compress "%(FullPath)" -o .\GeneratedFiles\qrc_%(Filename).cpp</Command>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">%(FullPath);..\..\diy\companion.png;..\..\diy\lord-magatama-l.png;..\..\diy\lord-magatama-lt.png;..\..\diy\lord-magatama-r.png;..\..\diy\lord-magatama-rt.png;..\..\diy\mask.png;..\..\diy\qun.png;..\..\diy\qun-lord.png;..\..\diy\qun-magatama-l.png;..\..\diy\qun-magatama-lt.png;..\..\diy\qun-magatama-r.png;..\..\diy\qun-magatama-rt.png;..\..\diy\qun-skill.png;..\..\diy\shu.png;..\..\diy\shu-lord.png;..\..\diy\shu-magatama-l.png;..\..\diy\shu-magatama-lt.png;..\..\diy\shu-magatama-r.png;..\..\diy\shu-magatama-rt.png;..\..\diy\shu-skill.png;..\..\diy\wei.png;..\..\diy\wei-lord.png;..\..\diy\wei-magatama-l.png;..\..\diy\wei-magatama-lt.png;..\..\diy\wei-magatama-r.png;..\..\diy\wei-magatama-rt.png;..\..\diy\wei-skill.png;..\..\diy\wu.png;..\..\diy\wu-lord.png;..\..\diy\wu-magatama-l.png;..\..\diy\wu-magatama-lt.png;..\..\diy\wu-magatama-r.png;..\..\diy\wu-magatama-rt.png;..\..\diy\wu-skill.png;%(AdditionalInputs)</AdditionalInputs>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Rcc%27ing %(Identity)...</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\GeneratedFiles\qrc_%(Filename).cpp;%(Outputs)</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">"$(QTDIR)\bin\rcc.exe" -name "%(Filename)" -no-compress "%(FullPath)" -o .\GeneratedFiles\qrc_%(Filename).cpp</Command>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(FullPath);..\..\diy\companion.png;..\..\diy\lord-magatama-l.png;..\..\diy\lord-magatama-lt.png;..\..\diy\lord-magatama-r.png;..\..\diy\lord-magatama-rt.png;..\..\diy\mask.png;..\..\diy\qun.png;..\..\diy\qun-lord.png;..\..\diy\qun-magatama-l.png;..\..\diy\qun-magatama-lt.png;..\..\diy\qun-magatama-r.png;..\..\diy\qun-magatama-rt.png;..\..\diy\qun-skill.png;..\..\diy\shu.png;..\..\diy\shu-lord.png;..\..\diy\shu-magatama-l.png;..\..\diy\shu-magatama-lt.png;..\..\diy\shu-magatama-r.png;..\..\diy\shu-magatama-rt.png;..\..\diy\shu-skill.png;..\..\diy\wei.png;..\..\diy\wei-lord.png;..\..\diy\wei-magatama-l.png;..\..\diy\wei-magatama-lt.png;..\..\diy\wei-magatama-r.png;..\..\diy\wei-magatama-rt.png;..\..\diy\wei-skill.png;..\..\diy\wu.png;..\..\diy\wu-lord.png;..\..\diy\wu-magatama-l.png;..\..\diy\wu-magatama-lt.png;..\..\diy\wu-magatama-r.png;..\..\diy\wu-magatama-rt.png;..\..\diy\wu-skill.png;%(AdditionalInputs)</AdditionalInputs>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Rcc%27ing %(Identity)...</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.\GeneratedFiles\qrc_%(Filename).cpp;%(Outputs)</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">"$(QTDIR)\bin\rcc.exe" -name "%(Filename)" -no-compress "%(FullPath)" -o .\GeneratedFiles\qrc_%(Filename).cpp</Command>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">%(FullPath);..\..\diy\companion.png;..\..\diy\lord-magatama-l.png;..\..\diy\lord-magatama-lt.png;..\..\diy\lord-magatama-r.png;..\..\diy\lord-magatama-rt.png;..\..\diy\mask.png;..\..\diy\qun.png;..\..\diy\qun-lord.png;..\..\diy\qun-magatama-l.png;..\..\diy\qun-magatama-lt.png;..\..\diy\qun-magatama-r.png;..\..\diy\qun-magatama-rt.png;..\..\diy\qun-skill.png;..\..\diy\shu.png;..\..\diy\shu-lord.png;..\..\diy\shu-magatama-l.png;..\..\diy\shu-magatama-lt.png;..\..\diy\shu-magatama-r.png;..\..\diy\shu-magatama-rt.png;..\..\diy\shu-skill.png;..\..\diy\wei.png;..\..\diy\wei-lord.png;..\..\diy\wei-magatama-l.png;..\..\diy\wei-magatama-lt.png;..\..\diy\wei-magatama-r.png;..\..\diy\wei-magatama-rt.png;..\..\diy\wei-skill.png;..\..\diy\wu.png;..\..\diy\wu-lord.png;..\..\diy\wu-magatama-l.png;..\..\diy\wu-magatama-lt.png;..\..\diy\wu-magatama-r.png;..\..\diy\wu-magatama-rt.png;..\..\diy\wu-skill.png;%(AdditionalInputs)</AdditionalInputs>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Rcc%27ing %(Identity)...</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles\qrc_%(Filename).cpp;%(Outputs)</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"$(QTDIR)\bin\rcc.exe" -name "%(Filename)" -no-compress "%(FullPath)" -o .\GeneratedFiles\qrc_%(Filename).cpp</Command>
+    </CustomBuild>
     <None Include="..\..\swig\ai.i">
       <FileType>Document</FileType>
     </None>
